--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -515,6 +515,7 @@
   .section-side-nav {
     display: block;
     width: 95vw;
+    z-index: 2;
   }
   .nav-box:nth-last-child(-n + 1) {
     margin-top: 0;
@@ -528,6 +529,13 @@
   .main-header {
     font-size: 2.4rem;
     letter-spacing: 4px;
+    width: 100%;
+    justify-content: space-between;
+    padding: 2rem 3rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
   #modal-expense .modal-content {
     max-width: 98vw;
